Chapter 1 June 9 (moved urban forest paragraph to study area)

--- a/writing/Chapter1.Rmd
+++ b/writing/Chapter1.Rmd
@@ -9,11 +9,9 @@ bibliography: PhD.bib
 fontsize: 12pt
 ---
 
-The urban forest provides critical ecosystem services to urban residents. All of the trees found in a city contribute to the urban forest and provide regulatory, provisioning, supporting, and cultural ecosystem services to residents [@milenniumecosystemassessment2005]. The urban forest provides regulating ecosystem services in cities that improve quality of life and health of urban residents. Importantly, regulating services must be provided *in situ* and cannot be outsourced from locations surrounding the city. Thus, the management, production, and provision of regulating ecosystem services is a key issue facing metropolitan areas. One of the most well-known examples of the urban forest's contribution to regulating the urban ecosystem is the ability of urban trees to buffer against the urban heat island effect (REFS). The shade and evapotranspiration provided by urban trees can reduce urban temperatures by several degrees, potentially reducing air temperatures from dangerous levels. In addition to temperature regulation, the urban forest also reduces air pollution, sequesters carbon, provides flood control, and promotes noise reduction [@andersson2015]. The ability of the urban forest to provide regulating ecosystem services is dependent on its composition, structure, and management.  
+All ecosystem processes are influenced by scale. The highly heterogeneous nature of cities requires a multi-scale approach. The drivers, capacity, and provision of ecosystem services by the urban forest are all dependent on the spatial scale of interest. Factors such as biodiversity, parcel size, spatial distribution of trees, density, soil type, scale of management and more determine the production and subsequent delivery of ecosystem services by the urban forest (REFS). Further, relevant scales may differ depending on the driver or service being examined. For example, the relevant scales of urban heat island mitigation by trees, e.g., extremely fine-scale measurements under tree canopies and very large scale measurements at the whole-city level, may differ from the relevant scales for air pollution mitigation, e.g., the combined effect of trees at the neighbourhood scale. Thus, to gain a comprehensive understanding of how ecosystem services and their drivers are operating, we must take a multi-scale approach. To date, there have been few studies that take a multi-scale and multi-service approach (but see REFS for examples). Further, most multi-scale studies take place in a single city, which provides valuable information for that specific location but limits the ability to extrapolate the trends in services and drivers examined.  
 
-Similar to the city it is a part of, the urban forest is dynamic and heterogeneous. There are many factors that impact the current ecosystem services delivered by the urban forest. Further, the provision of ecosystem services by the urban forest is dependent on the spatial and temporal scale of interest. Factors such as biodiversity, parcel size, spatial distribution of trees, density, soil type, past land use type, and more determine the production and subsequent delivery of ecosystem services by the urban forest (REFS). Due to the complex nature of the drivers of urban forest ecosystem services and lack of baseline knowledge, many studies to date have approached urban forest ecosystem services by looking at a single location or a single service. Now, with the strong foundation provided by detailed single-service and single-city studies, we can investigate the dynamic and heterogeneous nature of urban forest ecosystem services on a variety of scales.  
-
-We propose a framework of "cross-city" and "location-specific" drivers of ecosystem services in the urban forest. We would expect location-specific drivers to be unique to individual places and influence ecosystem services on a specific spatial scale. We would expect different cities to have various different location-specific drivers that influence one city's provision of ecosystem services but not another's. For example, different management practices in different municipalities may lead to different tree sizes, and thus result in a location-specific driver of aboveground carbon storage. Conversely, cross-city drivers are processes that influence ecosystem services in multiple locations and across spatial scales. These are processes that consistently influence the provision of ecosystem services, although the magnitude may shift depending on spatial context. For example, biodiversity of the urban forest may influence the provision of ecosystem services, regardless of which city or at what scale you are investigating. Our study's goals is to identify and differentiate between cross-city and location-specific drivers of urban forest ecosystem services using a cross-city, multi-scale, multi-service approach. Specifically, we will ask:
+To test the relevant scales of urban forest ecosystem services, we propose a framework of "cross-city" and "location-specific" drivers. We would expect location-specific drivers to be unique to individual places and influence ecosystem services on a specific spatial scale. We would expect different cities to have various different location-specific drivers that influence one city's provision of ecosystem services but not another's. For example, different management practices in different municipalities may lead to different tree sizes, and thus result in a location-specific driver of aboveground carbon storage. Conversely, cross-city drivers are drivers that influence ecosystem services in multiple locations and across spatial scales. These are processes that consistently influence the provision of ecosystem services, although the magnitude may shift depending on spatial context. For example, biodiversity of the urban forest may influence the provision of ecosystem services, regardless of which city or at what scale you are investigating. Our study's goals is to identify and differentiate between cross-city and location-specific drivers of urban forest ecosystem services using a cross-city, multi-scale, multi-service approach. Specifically, we will ask:
 
 > What are the cross-city drivers of regulatory ecosystem services provided by the urban forest in Canadian temperate cities?
 
