--- a/writing/Introduction.Rmd
+++ b/writing/Introduction.Rmd
@@ -29,6 +29,9 @@ My proposed thesis will investigate spatial and temporal variation in the delive
 # Study Area(s)
 My work will take place on the unceded and traditional lands of the Haudenosaunee and Mohawk peoples [@2021]. Before outlining my data collection and analysis methods, I believe it is important to acknowledge and outline my positionality. One's positionality refers to the space they occupy in relation to their research [@alcoff1988]. Discussing and acknowledging positionality is a widely accepted and encouraged part of scholarship for many disciplines, mainly in the social sciences [@england1994]. Natural science has so far gotten away without this important practice because of the belief that our research is "objective". However, my training and approach to the natural sciences is directly informed by my privilege, worldview, and experiences. As such, I believe that by outlining my biases and approach, I give context and credibility to the work I will do and provide a critical step in reproducible and transparent research. I am approaching this research as a descendent of white settler-colonial Europeans who grew up on the traditional and unceded homelands of the Haudenosaunee, Anishinaabe, and Attiwonderonk Peoples. My privilege as a cisgender, white, settler researcher directly informs the questions I ask and the science I produce. My training and approach to natural science is informed by a Eurocentric worldview, which means that I have been trained to view humans and nature as distinct entities and use a reductionist approach. My approach is not better or worse than others, however, it does inform how I will ask and answer questions in this system.
 
+
+The urban forest provides critical ecosystem services to urban residents. All of the trees found in a city contribute to the urban forest and provide regulatory, provisioning, supporting, and cultural ecosystem services [@milenniumecosystemassessment2005]. The urban forest is unique in the number and magnitude of regulating ecosystem services it provides which improve the quality of life and health of urban residents. The requirement of regulating services being provided *in situ* means that the management, production, and provision of regulating ecosystem services is a key part of effective city planning and management. One of the most well-known examples of the urban forest's contribution to regulating the urban ecosystem is the ability of urban trees to buffer against the urban heat island effect (REFS). The shade and evapotranspiration provided by urban trees can reduce urban temperatures by several degrees, potentially reducing air temperatures from levels that are dangerous to human health. The urban forest also reduces air pollution, sequesters carbon, provides flood control, and promotes noise reduction [@andersson2015]. However, the provision of regulating services by the urban forest is dependent on the scale of analysis, the species composition, and tree distribution (REFS). Thus, the ability of the urban forest to provide regulating ecosystem services is dependent on its management.  
+
 **more detail when I know wtf I am doing**
 
 \newpage
