--- a/writing/Glossary.Rmd
+++ b/writing/Glossary.Rmd
@@ -13,7 +13,19 @@ Table S1. Glossary of terms used.
 +------------------------+-----------------+--------------------+
 | **Term**               | **Definition**  | **Reference(s)**   |
 +========================+=================+====================+
-| Nature                 |                 |                    |
+| Urban                  |                 |                    |
+|                        |                 |                    |
++------------------------+-----------------+--------------------+
+| Natural                |                 |                    |
+|                        |                 |                    |
++------------------------+-----------------+--------------------+
+| Built                  |                 |                    |
+|                        |                 |                    |
++------------------------+-----------------+--------------------+
+| Physical               |                 |                    |
+|                        |                 |                    |
++------------------------+-----------------+--------------------+
+| Social                 |                 |                    |
 |                        |                 |                    |
 +------------------------+-----------------+--------------------+
 | Ecosystem Services     |                 |                    |
@@ -21,6 +33,9 @@ Table S1. Glossary of terms used.
 +------------------------+-----------------+--------------------+
 | Ecosystem              |                 |                    |
 | Disservices            |                 |                    |
++------------------------+-----------------+--------------------+
+| Regulating Services    |                 |                    |
+|                        |                 |                    |
 +------------------------+-----------------+--------------------+
 | Capacity               |                 |                    |
 |                        |                 |                    |
@@ -34,3 +49,9 @@ Table S1. Glossary of terms used.
 | Demand                 |                 |                    |
 |                        |                 |                    |
 +------------------------+-----------------+--------------------+
+| Urban Forest           |                 |                    |
+|                        |                 |                    |
++------------------------+-----------------+--------------------+
+
+
+
