Chapter 2 summary first attempt

--- a/writing/Glossary.Rmd
+++ b/writing/Glossary.Rmd
@@ -52,6 +52,9 @@ Table S1. Glossary of terms used.
 | Urban Forest           |                 |                    |
 |                        |                 |                    |
 +------------------------+-----------------+--------------------+
+| Legacy Effects         |                 |                    |
+|                        |                 |                    |
++------------------------+-----------------+--------------------+
 
 
 
