--- a/writing/PhD.bib
+++ b/writing/PhD.bib
@@ -69,6 +69,23 @@
   number = {3}
 }
 
+@article{alig2004,
+  title = {Urbanization on the {{US}} Landscape: Looking Ahead in the 21st Century},
+  shorttitle = {Urbanization on the {{US}} Landscape},
+  author = {Alig, Ralph J. and Kline, Jeffrey D. and Lichtenstein, Mark},
+  year = {2004},
+  month = aug,
+  volume = {69},
+  pages = {219--234},
+  issn = {01692046},
+  doi = {10.1016/j.landurbplan.2003.07.004},
+  abstract = {Conversion of rural lands to urban and other built-up uses affects the mix of commodities and services produced from the global land base. In the United States, there was a 34\% increase in the amount of land devoted to urban and built-up uses between 1982 and 1997. This increase came predominantly from the conversion of croplands and forestland, with the largest increases in developed area happening in the southern region of the country. In an analysis of drivers influencing developed land uses in the US, we found results that were consistent with hypothesized relationships, including significant increases in development as a result of increases in population density and personal income. From these results, we projected changes in potential future urbanization and development by 2025 given estimated increases in population and real personal income. The projections suggest continued urban expansion over the next 25 years, with the magnitude of increase varying by region. US developed area is projected to increase by 79\%, raising the proportion of the total land base that is developed from 5.2 to 9.2\%. Because much of the growth is expected in areas relatively stressed with respect to human\textendash environment interactions, such as some coastal counties, implications for landscape and urban planning include potential impacts on sensitive watersheds, riparian areas, wildlife habitat, and water supplies.},
+  file = {/home/icrichmond/Zotero/storage/U8M54NNK/Alig et al. - 2004 - Urbanization on the US landscape looking ahead in.pdf},
+  journal = {Landscape and Urban Planning},
+  language = {en},
+  number = {2-3}
+}
+
 @article{allen2016,
   title = {Scaling up Movements: {{From}} Individual Space Use to Population Patterns},
   author = {Allen, Andrew M. and Mansson, Johan and Sand, Hakan and Malmsten, Jonas and Ericsson, G{\"o}ran and Singh, Navinder J.},
@@ -4593,6 +4610,17 @@
   address = {{Toronto}}
 }
 
+@techreport{koebel1996,
+  title = {Urban {{Redevelopment}}, {{Displacement}} and the {{Future}} of the {{American City}}},
+  author = {Koebel, C Theodore},
+  year = {1996},
+  pages = {34},
+  institution = {{Virginia Center for Housing Research}},
+  file = {/home/icrichmond/Zotero/storage/ZIYDPFTS/Koebel - Urban Redevelopment, Displacement and the Future o.pdf},
+  language = {en},
+  type = {Technical {{Report}}}
+}
+
 @article{koen2010,
   title = {The {{Effect}} of {{Map Boundary}} on {{Estimates}} of {{Landscape Resistance}} to {{Animal Movement}}},
   author = {Koen, Erin L. and Garroway, Colin J. and Wilson, Paul J. and Bowman, Jeff},
@@ -7412,6 +7440,22 @@
   file = {/home/icrichmond/Zotero/storage/8C5U5QA9/Functions-of-vigilance-behavior-in-mammals-a-review.pdf},
   journal = {Acta Oecologica},
   number = {6}
+}
+
+@article{rahman2020,
+  title = {Traits of Trees for Cooling Urban Heat Islands: {{A}} Meta-Analysis},
+  shorttitle = {Traits of Trees for Cooling Urban Heat Islands},
+  author = {Rahman, Mohammad A. and Stratopoulos, Laura M.F. and {Moser-Reischl}, Astrid and Z{\"o}lch, Teresa and H{\"a}berle, Karl-Heinz and R{\"o}tzer, Thomas and Pretzsch, Hans and Pauleit, Stephan},
+  year = {2020},
+  month = mar,
+  volume = {170},
+  pages = {106606},
+  issn = {03601323},
+  doi = {10.1016/j.buildenv.2019.106606},
+  abstract = {A more detailed understanding of the micro-climatic thermal benefits of different urban tree species and the retrospective species characteristics is necessary to guide management decisions. In this review, we focused specifically on empirical data collected at ground level for below-canopy surface temperature (ST) and tran\- spiration cooling (AT), using a meta-analysis method. Tree canopy density was clearly identified as the most influential driver of different mechanisms of cooling benefits. Secondly, climate of the cities where the trees were grown showed significant impacts on cooling potentials: trees grown in Oceanic and Continental climates showed a higher cooling potential compared to trees grown in Mediterranean climate for AT and sub-tropical climate for ST. Thirdly, tree growth in size and ground surface cover showed significant impact. ST decreases almost linearly with the increase of canopy density; however, the rate is significantly lower over transpiring grass surfaces. Transpiration of trees planted over grass was ten times higher (4.15 g m\`A 2 min\`A 1) compared to a tree planted in paved cut-out pits (0.44 g m\`A 2 min\`A 1). Moreover, diffuse porous wood anatomy and trees originating from temperate and resource-rich forests showed better cooling potentials. Among the leaf traits, dark green leaves, {$<$} 0.15 mm of thickness showed higher AT and ST benefit. The review pointed out the lack of standardized study protocols in determining tree cooling benefits and empirical data, particularly at tropical and sub-tropical climate. Finally, the study suggested some recommendations for plantings that optimize the cooling benefits from urban greenspaces.},
+  file = {/home/icrichmond/Zotero/storage/F7W84BAP/Rahman et al. - 2020 - Traits of trees for cooling urban heat islands A .pdf},
+  journal = {Building and Environment},
+  language = {en}
 }
 
 @article{rainho2010,
