--- a/writing/PhD.bib
+++ b/writing/PhD.bib
@@ -10339,4 +10339,19 @@
   number = {5}
 }
 
+@article{zwierzchowska2018,
+  title = {Multi-Scale Assessment of Cultural Ecosystem Services of Parks in {{Central European}} Cities},
+  author = {Zwierzchowska, Iwona and Hof, Angela and Ioj{\u a}, Ioan-Cristian and Mueller, Christian and Poni{\.z}y, Lidia and Breuste, Juergen and Mizgajski, Andrzej},
+  year = {2018},
+  month = mar,
+  volume = {30},
+  pages = {84--97},
+  issn = {16188667},
+  doi = {10.1016/j.ufug.2017.12.017},
+  abstract = {Cultural ecosystem services (CES) provided by urban parks are complex phenomena and the diversity of user perspectives and their rather loose linkages to the objective and structural diversity of parks hamper informed planning. Stakeholder involvement in CES assessment has received little systematic attention and only few studies provide examples of the actual application of CES demand indicators or maps in policy and practice. In this context, we focus on physical use of landscapes in different environmental settings, aesthetic and existence ecosystem services. We seek to extend research on cultural urban ecosystem services of parks by 1) assessing their demand and flows as reflected in visitor perception and behaviors, 2) using accessibility as metrics that can be included in multi-scale (city and neighborhood) indicators that characterize distribution of urban green spaces' benefits in cities, and finally 3) identifying and understanding similarities and dissimilarities by a crosscity Central European approach. The cross-city comparative study in Central Europe reveals striking similarities. Respondents visit parks mainly to relax and rest as well as for pleasure and social activities. While parks tend to meet these demands well, the most pronounced mismatches are in the field of educational potential. The ecosystem service capacities of parks have different strengths in attracting visitors and in some cases this effect can be stronger than simple inconvenience in accessibility and distance. We add to the literature by explicitly involving park visitors as stakeholders in the assessment of cultural ecosystem services' delivery as mirrored in park visitor surveys. We propose a method that translates human needs, behaviors and perception into the CES approach. The indicator-based approach developed here supports understanding patterns in park use, cultural ecosystem services and their meaning at the site scale that can inform resilience planning at the district and citywide scales.},
+  file = {/home/icrichmond/Zotero/storage/3ERNDFSV/Zwierzchowska et al. - 2018 - Multi-scale assessment of cultural ecosystem servi.pdf},
+  journal = {Urban Forestry \& Urban Greening},
+  language = {en}
+}
+
 
