--- a/writing/PhD.bib
+++ b/writing/PhD.bib
@@ -1464,6 +1464,23 @@
   number = {2}
 }
 
+@article{cavender2019,
+  title = {Intersecting Urban Forestry and Botanical Gardens to Address Big Challenges for Healthier Trees, People, and Cities},
+  author = {Cavender, Nicole and Donnelly, Gerard},
+  year = {2019},
+  volume = {1},
+  pages = {315--322},
+  issn = {2572-2611},
+  doi = {10.1002/ppp3.38},
+  abstract = {Societal Impact Statement The need for urban greening increases with global urbanization. Trees are major assets to livable urban areas, providing valuable environmental services to combat challenges such as pollution, urban heat, and flooding, as well as to improve social cohesion, human health, and well-being. Investments in tree planting and arboriculture yield valuable returns, but trees face many challenges in the unnatural and stressful urban environment and in a rapidly changing climate. Botanical gardens have expertise in growing plants in designed landscapes. We urge their increased involvement with urban forestry to improve sustainability of cities and human lives. Summary Improving urban forests is one of the solutions to achieving several of the United Nations Sustainable Development Goals and making cities healthier and more livable for people. Priority should be given to protecting mature trees and promoting long-lived trees in the future. Achievement of this goal requires recognition of the myriad stresses trees face in built landscapes as well as the challenges related to climate change. Because all people living in communities are affected by the urban forest, developing solutions and forestry action plans should be a social endeavor and include diverse partnerships. Botanical gardens and arboreta can provide key resources in support of these efforts. They have a significant public reach, maintain a strong professional network, and can make important contributions to address key priorities including (a) protecting existing trees; (b) improving tree selection, diversity, and age structure; and (c) improving planning, standards, training, and management. A focus on below-ground aspects, such as root development and soil composition, is a critical component for success. Horticultural and scientific knowledge combined with extensive public reach make botanical gardens and arboreta important potential partners in achieving urban forest objectives, but a greater call to action is needed.},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1002/ppp3.38},
+  file = {/home/icrichmond/Zotero/storage/ZGII4YSR/Cavender and Donnelly - 2019 - Intersecting urban forestry and botanical gardens .pdf;/home/icrichmond/Zotero/storage/MPHS2G2N/ppp3.html},
+  journal = {PLANTS, PEOPLE, PLANET},
+  keywords = {arboreta,botanical gardens,cities,climate change,environmental services,global urbanization,human health,human well-being,trees,urban forestry,urban greening},
+  language = {en},
+  number = {4}
+}
+
 @article{chan1975,
   title = {{{ULTRAVIOLET}}-{{MEDIATED ANTIBIOTIC ACTIVITY OF THIOPHENE COMPOUNDS OF TAGETES}}},
   author = {Chan, G.F.Q. and Towers, N.G.H. and Mitchell, J.C.},
@@ -2100,6 +2117,22 @@
   journal = {Science},
   language = {en},
   number = {6373}
+}
+
+@article{diener2021,
+  title = {How Can Vegetation Protect Us from Air Pollution? {{A}} Critical Review on Green Spaces' Mitigation Abilities for Air-Borne Particles from a Public Health Perspective - with Implications for Urban Planning},
+  shorttitle = {How Can Vegetation Protect Us from Air Pollution?},
+  author = {Diener, Arnt and Mudu, Pierpaolo},
+  year = {2021},
+  month = nov,
+  volume = {796},
+  pages = {148605},
+  issn = {00489697},
+  doi = {10.1016/j.scitotenv.2021.148605},
+  abstract = {Air pollution causes the largest death toll among environmental risks globally, but interventions to purify ambient air remain inadequate. Vegetation and green spaces have shown reductive effects on air-borne pollutants concentrations, especially of particulate matter (PM). Guidance on green space utilisation for air quality control remains scarce, however, as does its application in practise. To strengthen the foundation for research and interventions, we undertook a critical review of the state of science from a public health perspective.},
+  file = {/home/icrichmond/Zotero/storage/FS4JHN4M/Diener and Mudu - 2021 - How can vegetation protect us from air pollution .pdf},
+  journal = {Science of The Total Environment},
+  language = {en}
 }
 
 @article{dodds1960,
@@ -4952,6 +4985,19 @@
   language = {en}
 }
 
+@book{lawrence2008,
+  title = {City {{Trees}}: {{A Historical Geography}} from the {{Renaissance Through}} the {{Nineteenth Century}}},
+  shorttitle = {City {{Trees}}},
+  author = {Lawrence, Henry W.},
+  year = {2008},
+  publisher = {{University of Virginia Press}},
+  abstract = {For those who have ever wondered why we have trees in cities or what makes the layout of cities like Paris and Amsterdam seem so memorable, City Trees: A Historical Geography from the Renaissance through the Nineteenth Century by Henry W. Lawrence provides a comprehensive and handsome guide to the history of trees in urban landscapes. Covering four centuries of development in the cities of Europe and America, this book shows how trees became integral to urban landscapes by looking at the historical evolution of the spaces in which they were planted and how these spaces were used. Reflecting on the impact trees have had on what many consider to be the fundamental aspects of city life--people, buildings, social and economic activity--Lawrence draws on graphic materials, written descriptions, local histories, and archival research to provide a unique look at the tree's role in urban landscape history. Primarily concerned with aesthetics, power, and national traditions, Lawrence reflects on the differing impacts city trees have had on multiple aspects of culture, from their roles as symbols and their representation of economic prosperity to the differing ways nations planted their trees, which gradually blended into an international style of urban planting. Complete with fascinating illustrations, City Trees will appeal to those interested in urban history and geography as well as the general public interested in cities, cultural history, and landscape design.},
+  googlebooks = {He2WfcVi58sC},
+  isbn = {978-0-8139-2800-5},
+  keywords = {Nature / Plants / Trees,Science / Earth Sciences / Geography},
+  language = {en}
+}
+
 @article{leal2017,
   title = {The {{Ecology}} and {{Evolution}} of {{Stoichiometric Phenotypes}}},
   author = {Leal, Miguel C and Seehausen, Ole and Matthews, Blake},
@@ -7792,6 +7838,22 @@
   language = {en}
 }
 
+@article{roman2017,
+  title = {Growing {{Canopy}} on a {{College Campus}}: {{Understanding Urban Forest Change}} through {{Archival Records}} and {{Aerial Photography}}},
+  shorttitle = {Growing {{Canopy}} on a {{College Campus}}},
+  author = {Roman, Lara A. and Fristensky, Jason P. and Eisenman, Theodore S. and Greenfield, Eric J. and Lundgren, Robert E. and Cerwinka, Chloe E. and Hewitt, David A. and Welsh, Caitlin C.},
+  year = {2017},
+  month = dec,
+  volume = {60},
+  pages = {1042--1061},
+  issn = {0364-152X, 1432-1009},
+  doi = {10.1007/s00267-017-0934-0},
+  file = {/home/icrichmond/Zotero/storage/3ZIMILII/Roman et al. - 2017 - Growing Canopy on a College Campus Understanding .pdf},
+  journal = {Environmental Management},
+  language = {en},
+  number = {6}
+}
+
 @article{roman2018,
   title = {Human and Biophysical Legacies Shape Contemporary Urban Forests: {{A}} Literature Synthesis},
   shorttitle = {Human and Biophysical Legacies Shape Contemporary Urban Forests},
@@ -8683,6 +8745,32 @@
   author = {{Statistics Canada}},
   year = {2011},
   pages = {1--1}
+}
+
+@misc{statisticscanada2019,
+  title = {The {{Daily}} \textemdash{} {{Population}} Projections: {{Canada}}, Provinces and Territories, 2018 to 2068},
+  shorttitle = {The {{Daily}} \textemdash{} {{Population}} Projections},
+  author = {Statistics Canada and {Government of Canada}},
+  year = {2019},
+  month = sep,
+  abstract = {Today, Statistics Canada looks to the future with the release of a new edition of population projections for Canada and the provinces and the territories.},
+  annotation = {Last Modified: 2019-09-17},
+  file = {/home/icrichmond/Zotero/storage/RMUKUKAU/dq190917b-eng.html},
+  howpublished = {https://www150.statcan.gc.ca/n1/daily-quotidien/190917/dq190917b-eng.htm},
+  language = {eng}
+}
+
+@misc{statisticscanada2021,
+  title = {The {{Daily}} \textemdash{} {{Canada}}'s Population Estimates: {{Subprovincial}} Areas, {{July}} 1, 2020},
+  shorttitle = {The {{Daily}} \textemdash{} {{Canada}}'s Population Estimates},
+  author = {Statistics Canada and {Government of Canada}},
+  year = {2021},
+  month = jan,
+  abstract = {Population growth in Canada's large urban regions slowed compared with the same period a year earlier (+1.3\% compared with +1.7\%). However, Canada continues to be more urbanized as the population of census metropolitan areas rose to 27.3 million (accounting for 71.8\% of the total population).},
+  annotation = {Last Modified: 2021-01-14},
+  file = {/home/icrichmond/Zotero/storage/NAR5M9VD/dq210114a-eng.html},
+  howpublished = {https://www150.statcan.gc.ca/n1/daily-quotidien/210114/dq210114a-eng.htm},
+  language = {eng}
 }
 
 @article{steenweg2017,
